[metadata]
name = nequip_jax
version = attr: nequip_jax.__version__
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.8

[options]
packages = find:
python_requires = >=3.8
install_requires =
    e3nn_jax
    flax
    numpy
